[metadata]
name = logline-agent
version = 0.0.1
description = Logline Agent
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/messa/logline
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7

[options.entry_points]
console_scripts =
    logline-agent = logline_agent:agent_main
