[metadata]
name = logline-server
version = 0.0.1
description = Logline Server
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/messa/logline
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    pyyaml

[options.entry_points]
console_scripts =
    logline-server = logline_server:server_main
